# agentic-customer-support

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
assets/: csm.excalidraw
config/: agents.yml  ingest.py  schema.yml  schemas.py
config/sql/: pgvector.sql  retrieval.sql
src/: exception.py  logger.py  utils.py
src/agent_team/: __init__.py  rag_agent.py  sql_agent.py  support_agent.py  web_agent.py  web_search.py
src/agent_team/guardrails/: __init__.py  input_rails.py
src/api/: dependencies.py  orchestrator.py  routes.py
src/models/: litellm_model.py
tests/: simulate_conversations.py  test_adk_agents.py  test_back_transfer.py  test_sql_agent.py  test_support_routing.py
